--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,31 @@
 spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/introspringdb
+#    username: "postgres"
+#    password: "4321"
+#    driver-class-name: org.postgresql.Driver
 
   datasource:
-    url: jdbc:h2:mem:demoBF2022 #"jdbc:mysql://localhost:3306"
-    username: sa
-    password: "1234"
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://localhost:3306/introSpringDb
+    username: "root"
+    password: ""
+    driver-class-name: com.mysql.jdbc.Driver
 
-  h2:
-    console:
-      enabled: true
+#  datasource:
+#    url: jdbc:h2:mem:demoBF2022
+#    username: sa
+#    password: "1234"
+#    driver-class-name: org.h2.Driver
+
+#  h2:
+#    console:
+#      enabled: true
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.H2Dialect
 
 server:
   port: 8081
